✨ feat(hero): add contextual companion cards by site phase
The hero right column now displays a different companion card
depending on the current site phase:
- Ticketing open/teasing: ticket card (existing)
- CFP open: call for papers companion
- Sponsoring open: sponsoring companion
- Default: previous edition recap

Also adds ticketingTeasing support and removes isGalleryEnabled.

--- a/src-astro/src/components/home/GallerySection.astro
+++ b/src-astro/src/components/home/GallerySection.astro
@@ -1,7 +1,7 @@
 ---
 import { siteConfig } from '@data/config/site';
 
-const { edition, isGalleryEnabled } = siteConfig;
+const { edition } = siteConfig;
 const previousYear = edition.year - 1;
 
 // Placeholder photos - will be replaced with actual Flickr photos
@@ -17,7 +17,6 @@ const photos = [
 ];
 ---
 
-{isGalleryEnabled && (
 <section class="gallery">
   <div class="gallery-inner">
     <div class="section-header">
@@ -54,7 +53,6 @@ const photos = [
     </div>
   </div>
 </section>
-)}
 
 <style>
   .gallery {
